--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-# FILE LOCATION: /requirements.txt (root of your GitHub repo)
+=# FILE LOCATION: /requirements.txt (root of your GitHub repo)
 # Python dependencies for subscription-based storytelling website
 
 # Flask and core web framework
-Flask==2.3.3
-Werkzeug==2.3.7
+Flask==3.0.0
+Werkzeug==3.0.1
 
 # Database
-Flask-SQLAlchemy==3.0.5
-SQLAlchemy==2.0.21
-psycopg2-binary==2.9.7
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.23
+psycopg2-binary==2.9.9
 
 # Authentication and security
 Flask-Bcrypt==1.0.1
-bcrypt==4.0.1
+bcrypt==4.1.2
 
 # Payment processing
 stripe==6.6.0
