--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,10 @@
-# Python dependencies for subscription-based storytelling website
+# Essential dependencies for subscription-based storytelling website
 
-# Flask and core web framework
 Flask==3.0.0
-Werkzeug==3.0.1
-
-# Database
 Flask-SQLAlchemy==3.1.1
-SQLAlchemy==2.0.23
-psycopg2-binary==2.9.9
-
-# Authentication and security
 Flask-Bcrypt==1.0.1
-bcrypt==4.1.2
-
-# Payment processing
+psycopg2-binary==2.9.9
 stripe==7.8.0
-
-# HTTP requests (for Stripe webhooks)
-requests==2.31.0
-
-# Date and time utilities
-python-dateutil==2.8.2
-
-# JSON handling
-simplejson==3.19.2
-
-# Environment variables
-python-dotenv==1.0.0
-
-# WSGI server for production
 gunicorn==21.2.0
-
-# Database migrations (optional but recommended)
-Flask-Migrate==4.0.5
-Alembic==1.12.0
-
-# Email validation
-email-validator==2.1.0
-
-# URL parsing
-urllib3==2.1.0
-
-# Timezone handling
-pytz==2023.3
-
-# Caching (optional)
-Flask-Caching==2.1.0
-
-# CORS handling (if needed for API)
-Flask-CORS==4.0.0
-
-# Session management
-Flask-Session==0.5.0
-
-# Security
-cryptography==41.0.8
-
-# Database connection pooling
-SQLAlchemy-Utils==0.41.1
+requests==2.31.0
+python-dateutil==2.8.2
