--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-# Essential dependencies for subscription-based storytelling website
+# Alternative requirements.txt with newer PostgreSQL adapter
 
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Bcrypt==1.0.1
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.13
 stripe==7.8.0
 gunicorn==21.2.0
 requests==2.31.0
