--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Bcrypt==1.0.1
-psycopg[binary]==3.2.2
+psycopg2-binary==2.9.5
 stripe==7.8.0
 gunicorn==21.2.0
 requests==2.31.0
