--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Bcrypt==1.0.1
-stripe==7.8.0
+stripe==6.6.0
 gunicorn==21.2.0
 requests==2.31.0
 python-dateutil==2.8.2
+psycopg2-binary==2.9.7  # optional but needed for PostgreSQL
