--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ python-dateutil==2.8.2
 psycopg2-binary==2.9.7  # optional but needed for PostgreSQL
 Flask-WTF
 Flask-Limiter
+ffmpeg-python==0.2.0
