--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,4 @@
-# Essential dependencies for subscription-based storytelling website
-
-Flask==3.0.0
-Flask-SQLAlchemy==3.1.1
-Flask-Bcrypt==1.0.1
-stripe==6.6.0
-gunicorn==21.2.0
-requests==2.31.0
-python-dateutil==2.8.2
-psycopg2-binary==2.9.7  # optional but needed for PostgreSQL
-Flask-WTF
-Flask-Limiter
-ffmpeg-python==0.2.0
+flask
+requests
+openai
+gunicorn
