--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,30 @@
 # Core Flask Framework
-Flask==2.3.3
+Flask==2.3.2
 Flask-CORS==4.0.0
 
 # OpenAI API for AI-powered content generation
-openai==0.28.1
+openai==1.3.7
 
 # Image processing and optimization
-Pillow==10.0.1
+Pillow==9.5.0
 
 # File handling and security
-Werkzeug==2.3.7
+Werkzeug==2.3.6
 
 # Additional utilities
 python-dotenv==1.0.0
-gunicorn==21.2.0
+gunicorn==20.1.0
 
-# Optional: For production deployment
-redis==5.0.1
-celery==5.3.4
+# JSON handling
+requests==2.31.0
 
-# Optional: For enhanced logging and monitoring
+# For async support (if needed)
+aiohttp==3.8.5
+
+# UUID support
+uuid
+
+# Base64 and IO support (built-in modules)
+
+# Optional: For enhanced logging
 python-json-logger==2.0.7
-
-# Optional: For rate limiting (if needed)
-Flask-Limiter==3.5.0
-
-# Optional: For database support (if you want to store generation history)
-SQLAlchemy==2.0.23
-Flask-SQLAlchemy==3.1.1
-
-# Optional: For form validation
-WTForms==3.1.0
-Flask-WTF==1.2.1
-
-# Development dependencies (remove for production)
-pytest==7.4.3
-pytest-flask==1.3.0
-black==23.11.0
-flake8==6.1.0
